kubernetes/production/locations-services-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: locations-services
  name: locations-services
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: "8081"
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: locations-services
  type: LoadBalancer
