kubernetes/production/locations-services-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
  - secretName: ssl-cert
  rules:
  - http:
      paths:
      - backend:
          serviceName: locations-services
          servicePort: 8080
        path: /locations
      - backend:
          serviceName: locations-services
          servicePort: 8080
        path: /locations/*
